# experiments

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE.rst  README.rst  profile.py  requirements.txt
.circleci/: config.yml
.github/: renovate.json  renovate.json5  settings.yml
android-solitaire/: .gitignore  Makefile  build.gradle  gradle.properties  gradlew
android-solitaire/app/: build.gradle  proguard-rules.pro
android-solitaire/app/src/main/: AndroidManifest.xml
asyncio-http-perf/: .gitignore  Makefile  README.rst  README.src  pyproject.toml  server.go
asyncio-http-perf/asyncio_http_perf/: __init__.py  aiohttp.py  asks.py  config.py  httpx.py  utils.py
changes/: .gitignore  Cargo.toml  LICENSE.txt  README.rst  requirements.test.txt  requirements.txt  setup.py
changes/changes/: __init__.py  __main__.py  clog.py  version.py
changes/changes/hosts/: __init__.py  base.py  github.py  readthedocs.py
changes/changes/indexes/: pypi.py
changes/changes/sources/: __init__.py  pypi.py
changes/getchanges/: __main__.py  clog.py  version.py
changes/getchanges/hosts/: github.py
changes/getchanges/indexes/: __init__.py  base.py
changes/src/: changelog.rs  http.rs  main.rs  python.rs
changes/tests/: main_test.py
docker-size/: Makefile  README.rst  script.py
docker-size/alpine/: Dockerfile
docker-size/alpine-multi/: Dockerfile
docker-size/alpine-multi-from-standard/: Dockerfile
docker-size/alpine-remove-deps/: Dockerfile
docker-size/standard/: Dockerfile
docker-size/standard-multi/: Dockerfile
g2p/: __init__.py  params.py
game/: .gitignore  Cargo.toml
game-of-life/: Cargo.toml
game-of-life/src/: board.rs
game/src/: board.rs  game.rs  main.rs  menu.rs  procedural.rs  utils.rs
gcp-image-from-docker/: .dockerignore  Dockerfile  Makefile  README.rst
gcp-image-from-docker/builtin/: dhclient.service  expand-root  expand-root.service  getty.service.override  ssh_config
gcp-image-from-docker/conf/: configure.sh  device.map  sfdisk.part
google-pubsub-oneoff/: push.py  requirements.txt  sink.py
google-pubsub-perf/: README.rst  requirements.txt  run.py
gw2/: README.rst  crafting.py  fractals.json  fractals.py
jaro-winkler-comparisons/: Makefile  README.rst
jaro-winkler-comparisons/c/: Makefile  jaro.c  jaro.h  main.c  runner.sh
jaro-winkler-comparisons/erlang/: Makefile  main.erl  similarity_jw.erl
jaro-winkler-comparisons/ruby/: Makefile  test.rb
kms-auth/: Dockerfile  README.rst  client.py  configuration.tf  server.py
league/: README.rst  mastery.py
multilang-lib/: .gitignore  Makefile  README.rst  ffibuild.py
multilang-lib/app/: app.c  app.cffi.py  app.ctypes.py  app.html
observability/: Makefile  README.rst  appcluster.yaml  architecture.dot  k8s.yaml  reportcluster.yaml
observability/alertmanager/: Dockerfile
observability/app/: Dockerfile  main.py  pyproject.toml
observability/appcluster/alertmanager/: alertmanager.yml
observability/appcluster/app/: main.py  pyproject.toml
observability/appcluster/prometheus/: prometheus.rules  prometheus.yml
observability/grafana/: Dockerfile
observability/grafana/etc/: grafana.ini
observability/grafana/etc/provisioning/dashboards/: default.yaml
observability/grafana/etc/provisioning/datasources/: prometheus.yaml
observability/grafana/var/dashboards/: app.json
observability/k8s/: appcluster-a.yaml  appcluster-b.yaml  reportcluster-a.yaml
observability/prometheus/: Dockerfile  prometheus.yml
observability/reportcluster/grafana/: Dockerfile
observability/reportcluster/grafana/etc/: grafana.ini
observability/reportcluster/grafana/var/dashboards/: app.json
python-datetimes/: README.rst  test.py
selfhost/: .gitignore  Makefile  README.rst  docker-compose.osx.yml  docker-compose.yml
selfhost/caddy/: Caddyfile
selfhost/cloudflared/: config.yml
selfhost/dashy/: config.yml
selfhost/hass/: .HA_VERSION  configuration.yaml  customize.yaml  zones.yaml
selfhost/homepage/: bookmarks.yaml  docker.yaml  kubernetes.yaml  services.yaml  settings.yaml  widgets.yaml
selfhost/jellyfin/: branding.xml  migrations.xml  network.xml  system.xml
selfhost/jellyfin/data/plugins/configurations/: Jellyfin.Plugin.MusicBrainz.xml  Jellyfin.Plugin.Omdb.xml  (+2 more)
selfhost/prowlarr/: config.xml
selfhost/qbittorrent/config/: categories.json  qBittorrent-data.conf  qBittorrent.conf  watched_folders.json
selfhost/radarr/: config.xml
selfhost/readarr/: config.xml
selfhost/sonarr/: config.xml
sentry-performance/: README.rst  results.txt  run.sh
simulator/: mix.exs
simulator/lib/: simulator.ex
simulator/lib/simulator/: actor.ex  painter.ex  world.ex
string-manips/: Fifth.java  README.rst  first.py  fourth.rb  second.cpp  seventh.rkt  sixth.hs  third.sh
tensorflow-perf/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.rst  benchmark.py  profile.py  requirements.txt  setup.py
tensorflow-perf/g2p/: __init__.py  graph.py  params.py  predict.py  session.py
tensorflow-perf/g2p/model/: optimized_model.pb
tensorflow-perf/g2p/model/saved/: frozen_model.pb  saved_model.pb
tensorflow-perf/results/: raw.json
tensorflow-perf/tensorflow/: Dockerfile
testapi/: Dockerfile  pyproject.toml
testapi/testapi/: app.py
testapi/tests/: app_test.py  conftest.py
(+40 files in other folders)
